--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
 
-<body>
+    <body>
+        <h1>Hello There!</h1>
+        <p>This is a paragraph</p>
 
-</body>
-<h1>Hello There!</h1>
-    <p>This is a paragraph<p>
+        <form>
+            <input type="text">
+            <button>Click Here</button>
+        </form>
+
+    </body>
 
 </html>
